added AWS email server

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "license": "EULA",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "app-notify": "^2.2.2"
   }
 }
