--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,10 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "react-snowfall": "^1.2.1",
     "sass": "^1.56.1",
+    "sendemail": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sinon": "^15.0.0"
   }
 }
